--- a/views/base.pug
+++ b/views/base.pug
@@ -8,21 +8,13 @@ html
 		link(rel='shortcut icon' type='image/png' href='img/favicon.png')
 		link(href='https://fonts.googleapis.com/css?family=Lato:300,300i,700' rel='stylesheet')
 
-		title Natours | #{tour}
+		title Natours | #{title}
 	body
 	// HEADER
 	include _header
 
 	// CONTENT
-	main.main 
-		.card-container
-			.card 
-				.card__header 
-					.card__picture 
-						.card__picture-overlay &nbsp;
-						img.card__picture-img(src='img/tour-1-cover.jpg' alt='Tour 1')
-						h3.heading-tertirary 
-							span= tour
+	block content
 
 	// FOOTER
 	include _footer
