--- a/views/_header.pug
+++ b/views/_header.pug
@@ -3,10 +3,10 @@ header.header
 		a.nav__el(href='#') All tours 
 		form.nav__search
 			button.nav__search-btn
-				<svg><use xlink:href="img/icons.svg#icon-search"></use></svg>
+				<svg><use xlink:href="/img/icons.svg#icon-search"></use></svg>
 			input.nav__search-input(type='text' placeholder='Search Tours')
 	.header__logo 
-		img(src='img/logo-white.png' alt='Natours logo')
+		img(src='/img/logo-white.png' alt='Natours logo')
 	nav.nav.nav--user 
 		button.nav__el Log in
 		button.nav__el.nav__el--cta Sign up
