--- a/views/overview.pug
+++ b/views/overview.pug
@@ -40,4 +40,4 @@ block content
 							span.card__footer-value= tour.rating
 							| 
 							span.card__footer-text= `rating (${tour.ratingsQuantity})`
-						a.btn.btn--green.btn--small(href=`tour/${tour.slug}`) Details
+						a.btn.btn--green.btn--small(href=`/tour/${tour.slug}`) Details
