--- a/views/base.pug
+++ b/views/base.pug
@@ -1,14 +1,15 @@
 doctype html
 html
 	head
-		meta(charset='UTF-8')
-		meta(name='viewport' content='width-device-width, initial-scale=1.0')
+		block head
+			meta(charset='UTF-8')
+			meta(name='viewport' content='width-device-width, initial-scale=1.0')
 
-		link(rel='stylesheet' href='/css/style.css')
-		link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
-		link(href='https://fonts.googleapis.com/css?family=Lato:300,300i,700' rel='stylesheet')
+			link(rel='stylesheet' href='/css/style.css')
+			link(rel='shortcut icon' type='image/png' href='/img/favicon.png')
+			link(href='https://fonts.googleapis.com/css?family=Lato:300,300i,700' rel='stylesheet')
 
-		title Natours | #{title}
+			title Natours | #{title}
 	body
 	// HEADER
 	include _header
@@ -18,3 +19,5 @@ html
 
 	// FOOTER
 	include _footer
+
+	script(src='/js/mapbox.js')
