--- a/views/overview.pug
+++ b/views/overview.pug
@@ -12,7 +12,7 @@ block content
 						h3.heading-tertirary
 							span= tour.name
 					.card__details
-						h4.card__sub-heading= `${tour.difficulty} ${tour.duration}-day`
+						h4.card__sub-heading= `${tour.difficulty} ${tour.duration}-day adventure`
 						p.card__text= tour.summary
 						.card__data
 							svg.card__icon
