--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,6 +1,6 @@
 header.header
 	nav.nav.nav--tours 
-		a.nav__el(href='#') All tours 
+		a.nav__el(href='/') All tours 
 		form.nav__search
 			button.nav__search-btn
 				<svg><use xlink:href="/img/icons.svg#icon-search"></use></svg>
@@ -8,8 +8,8 @@ header.header
 	.header__logo 
 		img(src='/img/logo-white.png' alt='Natours logo')
 	nav.nav.nav--user 
-		button.nav__el Log in
-		button.nav__el.nav__el--cta Sign up
+		a.nav__el(href="/login") Log in
+		a.nav__el.nav__el--cta Sign up
 	//- 	a.nav_el(href='#') My bookings 
 	//- 	a.nav_el(href='#')
 	//- 		img.nav__user-img(src='img/user.jpg' alt='User photo')
