--- a/views/base.pug
+++ b/views/base.pug
@@ -20,6 +20,4 @@ html
 	// FOOTER
 	include _footer
 
-	script(src='https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js')
-	//- script(src='/js/mapbox.js')
-	script(src='/js/login.js')
+	script(src='/js/module.js' type="module")
