--- a/views/base.pug
+++ b/views/base.pug
@@ -11,13 +11,13 @@ html
 
 			title Natours | #{title}
 	body
-	// HEADER
-	include _header
+		// HEADER
+		include _header
 
-	// CONTENT
-	block content
+		// CONTENT
+		block content
 
-	// FOOTER
-	include _footer
+		// FOOTER
+		include _footer
 
-	script(src='/js/module.js' type="module")
+		script(type='module' src='./index.js')
